2013-07-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/boot/ecj-diamond.patch:
	Regenerate.  Add new cases in
	com.sun.org.apache.xml.internal.serializer.Encodings,
	sun.nio.ch.EPollArrayWrapper and
	sun.nio.ch.EPollSelectorImpl.
	Remove case in sun.util.logging.PlatformLogger.
	* patches/boot/ecj-multicatch.patch:
	Add new case in
	com.sun.org.apache.xml.internal.serializer.Encodings.

2013-07-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Bump to b31.
	(CORBA_CHANGESET): Update to current HEAD.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* hotspot.map: Update default to current HEAD.

2013-07-01  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/boot/ecj-diamond.patch,
	* patches/boot/ecj-multicatch.patch:
	Add new cases.
	* patches/boot/ecj-stringswitch.patch:
	Update MethodHandleNatives patch, including
	adding new case.
	* patches/boot/tobin.patch:
	Update following move from sun.awt.X11
	to sun.awt.
	* patches/rhino.patch,
	* patches/systemtap_gc.patch:
	Regenerated.

2013-06-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add release notes for 2.1.9, 2.2.9,
	2.3.10 and 2.4.1

2013-06-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Update 2.4.0 following release
	annoucement, including setting release
	date.

2013-04-21  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(ICEDTEA_NAME): Make same across all versions.

2013-06-09  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(EXTRA_DIST): Remove non-existent JamVM patch
	directory.

2013-06-09  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am: