@@ -1,3 +1,9 @@
+2013-08-30  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	* acinclude.m4:
+	(IT_BYTECODE7_CHECK): Remove inverse logic to
+	make things clearer.
+
 2013-07-12  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	* patches/boot/ecj-diamond.patch:
